0025710: Visualization - Eliminate all calls of glPushAttrib/glPopAttrib in TKOpenGl